--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,4 +4,7 @@
   border: 1px solid gray;
   padding: 5px;
   margin: 10px auto;
+  box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 20px rgba(0, 0, 0, 0.1) inset;
+  border-radius:5px;
+  max-height: 100%;
 }
