--- a/client/src/components/UI/ListItems/ListItem.css
+++ b/client/src/components/UI/ListItems/ListItem.css
@@ -10,7 +10,11 @@
 	width: 100%;
 	display: flex;
 	font-size: 12px;
-	color: gray;
+	color: #313537;
+	text-align: left;
+	background-color: #F1F2F3;
+	padding: 5px;
+	border-radius: 5px;
 }
 
 .ListItem .nickname{
@@ -19,7 +23,7 @@
 	padding-right: 10px;
 }
 
-.ListItem .time-ago{
+.ListItem .time-ago, .ListItem .pending{
 	font-size: 12px;
 	color: gray;
 	display: flex;
